boutique/preview/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: boutique
  annotations:
    linkerd.io/inject: enabled
